--- a/client/package.json
+++ b/client/package.json
@@ -15,8 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "next": "13.3.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "sass": "^1.62.0"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
