--- a/server/admin-dashboard/package.json
+++ b/server/admin-dashboard/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "material-dashboard",
+  "name": "admin-dashboard",
   "version": "3.0.5",
-  "description": "Freebie Dashboard for Bootstrap 5",
   "main": "pages/dashboard.html",
   "directories": {
     "example": "root"
@@ -12,30 +11,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "gulp-watch"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/creativetimofficial/material-dashboard.git"
-  },
-  "keywords": [
-    "material dashboard",
-    "bootstrap 5",
-    "dashboard",
-    "creative tim",
-    "html dashboard",
-    "html css dashboard",
-    "web dashboard",
-    "freebie",
-    "free bootstrap dashboard",
-    "css3 dashboard",
-    "bootstrap dashboard",
-    "frontend",
-    "responsive bootstrap dashboard"
-  ],
-  "author": "Creative Tim <hello@creative-tim.com> (https://www.creative-tim.com/)",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/creativetimofficial/material-dashboard/issues"
-  },
   "devDependencies": {
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
@@ -45,6 +21,5 @@
     "gulp-sourcemaps": "^2.6.5",
     "gulp-open": "^3.0.1",
     "sass": "^1.49.9"
-  },
-  "homepage": "http://creative-tim.com/product/material-dashboard"
+  }
 }
