--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,9 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "next": "13.3.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
