--- a/server/package.json
+++ b/server/package.json
@@ -8,9 +8,12 @@
     "prettier:fix": "prettier --write ."
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mssql": "^9.1.1"
+    "mssql": "^9.1.1",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "eslint": "^8.39.0",
