--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mssql": "^9.1.1"
   },
   "devDependencies": {
