--- a/server/package.json
+++ b/server/package.json
@@ -13,13 +13,14 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mssql": "^9.1.1",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1"
   },
   "devDependencies": {
     "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "nodemon": "^2.0.22",
+    "nodemon": "^3.0.2",
     "prettier": "^2.8.8",
     "rimraf": "^5.0.0",
     "ts-node": "^10.9.1",
